--- a/portfolio-details1.html
+++ b/portfolio-details1.html
@@ -106,20 +106,18 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/app-1.jpg" alt="">
+                  <img src="assets/img/portfolio/rays_L/rays_L-1.JPG" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/product-1.jpg" alt="">
+                  <img src="assets/img/portfolio/rays_L/rays_L-2.jpg" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/branding-1.jpg" alt="">
+                  <img src="assets/img/portfolio/rays_L/rays_L-3.jpg" alt="">
                 </div>
 
-                <div class="swiper-slide">
-                  <img src="assets/img/portfolio/books-1.jpg" alt="">
-                </div>
+               
 
               </div>
               <div class="swiper-pagination"></div>
@@ -128,12 +126,12 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Project information</h3>
+              <h3>Product description</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Build volume</strong>: 190*120*150mm</li>
+                <li><strong>XY Resolution</strong>: 50microns</li>
+                <li><strong>Print Speed</strong>: 20~70mm/h</li>
+                <li><strong>Resolution Unit</strong>: 3840*2400 pixel</li>
               </ul>
             </div>
             <div class="portfolio-description">
