--- a/index.html
+++ b/index.html
@@ -521,8 +521,6 @@
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-fdm">FDM</li>
             <li data-filter=".filter-uclcd">UV LCD</li>
-            <li data-filter=".filter-branding">Branding</li>
-            <li data-filter=".filter-books">Books</li>
           </ul><!-- End Portfolio Filters -->
 
           <div class="row g-0 portfolio-container">
@@ -535,105 +533,82 @@
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
-
             <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-uclcd">
               <img src="assets/img/portfolio/rays_L/rays_L-1.JPG" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Rays L</h4>
-                <a href="assets/img/portfolio/rays_L/rays_L-2.jpg" title="Rays L" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details1.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+                <h4>Rays-L_up 8.9" 4k Mono  </h4>
+                <a href="assets/img/portfolio/rays_L/rays_L-1.JPG" title="Rays-L_up 8.9 4k Mono" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details_raysL.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-uclcd">
+              <img src="assets/img/portfolio/lens_M/lensM_1.jpeg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Lens-M 10.3inch 8Kmono  </h4>
+                <a href="assets/img/portfolio/lens_M/lensM_1.jpeg" title="Lens-M 10.3inch 8Kmono" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details_lensM.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-uclcd">
+              <img src="assets/img/portfolio/lens_S/lenss_1.jpeg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Lens-S 6.6inch 4Kmono </h4>
+                <a href="assets/img/portfolio/lens_S/lenss_1.jpeg" title="Lens-S 6.6inch 4Kmono" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details_lensS.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-uclcd">
+              <img src="assets/img/portfolio/raysXL/raysXL_1.jpeg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Rays-XL 13.3" 4k Mono </h4>
+                <a href="assets/img/portfolio/raysXL/raysXL_1.jpeg" title="Rays-XL 13.3 4k Mono" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details_raysXL.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-fdm">
+              <img src="assets/img/portfolio/Accucraftl250plus/Accu1.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Accucraft i250+  </h4>
+                <a href="assets/img/portfolio/Accucraftl250plus/Accu1.jpg" title="Accucraft i250+" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details_Accucrafti250plus.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-fdm">
+              <img src="assets/img/portfolio/Accucraftl250plus/Accu1.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Aeqon 400V3  </h4>
+                <a href="assets/img/portfolio/Accucraftl250plus/Accu1.jpg" title="Aeqon 400V3" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details_Aeqon400V3.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-fdm">
+              <img src="assets/img/portfolio/Aion500MK2/Aion1.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>AION 500 MK2   </h4>
+                <a href="assets/img/portfolio/Aion500MK2/Aion1.jpg" title="AION 500 MK2 " data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details_AION500MK2.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-fdm">
+              <img src="assets/img/portfolio/Aion500MK2/Aion1.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Aion NX   </h4>
+                <a href="assets/img/portfolio/Aion500MK2/Aion1.jpg" title="Aion NX" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details_AionNX.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-fdm">
+              <img src="assets/img/portfolio/Aion500MK2/Aion1.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Alpha 500   </h4>
+                <a href="assets/img/portfolio/Aion500MK2/Aion1.jpg" title="Alpha 500" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details_Alpha500.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-branding">
-              <img src="assets/img/portfolio/branding-1.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Branding 1</h4>
-                <a href="assets/img/portfolio/branding-1.jpg" title="Branding 1" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-books">
-              <img src="assets/img/portfolio/books-1.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Books 1</h4>
-                <a href="assets/img/portfolio/books-1.jpg" title="Branding 1" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-app">
-              <img src="assets/img/portfolio/app-2.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>App 2</h4>
-                <a href="assets/img/portfolio/app-2.jpg" title="App 2" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-product">
-              <img src="assets/img/portfolio/product-2.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Product 2</h4>
-                <a href="assets/img/portfolio/product-2.jpg" title="Product 2" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-branding">
-              <img src="assets/img/portfolio/branding-2.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Branding 2</h4>
-                <a href="assets/img/portfolio/branding-2.jpg" title="Branding 2" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-books">
-              <img src="assets/img/portfolio/books-2.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Books 2</h4>
-                <a href="assets/img/portfolio/books-2.jpg" title="Branding 2" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-app">
-              <img src="assets/img/portfolio/app-3.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>App 3</h4>
-                <a href="assets/img/portfolio/app-3.jpg" title="App 3" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-product">
-              <img src="assets/img/portfolio/product-3.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Product 3</h4>
-                <a href="assets/img/portfolio/product-3.jpg" title="Product 3" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-branding">
-              <img src="assets/img/portfolio/branding-3.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Branding 3</h4>
-                <a href="assets/img/portfolio/branding-3.jpg" title="Branding 2" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-books">
-              <img src="assets/img/portfolio/books-3.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Books 3</h4>
-                <a href="assets/img/portfolio/books-3.jpg" title="Branding 3" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
+           
 
           </div><!-- End Portfolio Container -->
 
@@ -784,7 +759,7 @@
         </div>
 
         <div class="social-links order-first order-lg-last mb-3 mb-lg-0">
-          <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
+          <!-- <a href="#" class="twitter"><i class="bi bi-twitter"></i></a> -->
           <a href="https://www.facebook.com/profile.php?id=100071739372870" class="facebook"><i class="bi bi-facebook"></i></a>
           <a href="https://www.instagram.com/emaze_technologies/#" class="instagram"><i class="bi bi-instagram"></i></a>
           
