--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
 
         <div class="section-header">
           <h2>Contact Us</h2>
-          <p>Ea vitae aspernatur deserunt voluptatem impedit deserunt magnam occaecati dssumenda quas ut ad dolores adipisci aliquam.</p>
+          <p>To help you in finding right product for your needs.</p>
         </div>
 
       </div>
